--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Relativity Releases FAQ Chatbot",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r src/prompts dist/",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "watch": "tsc -w"
